---
version: 0.85
date:    Tue Sep 10 09:27:10 GMT 2013
changes:
- Fix for https://rt.cpan.org/Ticket/Display.html?id=19838 where synopsis in YAML::Dumper doesn't work as exptected.
---
version: 0.84
date:    Fri Jul 13 18:17:27 GMT 2012
changes:
- Resolve distribution error that caused .git to be shipped in the .tar.gz
---
version: 0.83
date:    Fri Jul 13 15:44:03 GMT 2012
changes:
- Only call stat() and tell() on a filehandle if fileno existed
- Explicit tied() call on globs to avoid a 5.16 deprecation warning
---
version: 0.82
date:    Thu Jul 12 18:49:45 GMT 2012
changes:
- Test scalar @array rather than deprecated defined @array (Sebastian Stumpf)
---
version: 0.81
date:    Thu Apr 19 11:03:38 PDT 2012
changes:
- Patch from https://rt.cpan.org/Public/Bug/Display.html?id=74826
- YAML::Mo uses Safe Mo https://rt.cpan.org/Public/Bug/Display.html?id=76664
---
version: 0.80
date:    Fri Feb 10 12:56:08 PST 2012
changes:
- Patch from https://rt.cpan.org/Ticket/Display.html?id=73702
- Make YAML::Node subclass YAML::Mo::Object as well as Exporter (MSTROUT)
---
version: 0.79
date:    Wed Feb  8 17:25:55 PST 2012
changes:
- Peter Scott and others noticed Mo::xxx causing problems on newer perls.
  Removed xxx for now.
---
version: 0.78
date:    Sun Jan  1 23:53:57 PST 2012
changes:
- Apply patch from ANDK++ to deal with B::Deparse changes.
---
version: 0.77
date:    Thu Sep 29 18:28:25 CEST 2011
changes:
- Add $VERSION back to all modules.
- Released from Liz++ and Wendy++ garage attic!
---
version: 0.76
date:    Wed Sep 28 12:05:08 CEST 2011
changes:
- Removed YAML::import per mst.
---
version: 0.75
date:    Tue Sep 27 00:46:19 CEST 2011
changes:
- Switch to Mo for OO (YAML::Mo)
- use_test_base in Makefile.PL.
---
version: 0.74
date:    Sun Sep 25 22:05:05 CEST 2011
changes:
- Switch to Module::Package
- Removed extra $VERSION lines from submodules
- Released from Liz++ and Wendy++'s Tool Basement!

---
version: 0.73
date:    Tue Apr 19 20:14:59 EST 2011
changes: